Added gameText to tell user current situation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 id="wordBoard">xx</h2>
 <p id="gameText">Enter a letter below:</p>
 <div class="center" style="text-align: center">
-<input id="letterInput">
+<input id="letterInput" type="text" maxlength="1">
     <button id="enterLetterBtn">Enter</button>
 </div>
 <h2>Incorrect letters</h2>
